[package]
name = "btc-proto-handshake"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "b-handshake"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
byteorder = "1.5.0"
hex = "0.4.3"
sha2 = "0.10.6"
rand = "0.8.5"