[package]
name = "btc-p2p"
version = "0.1.0"
edition = "2021"
description = "A library for the Bitcoin protocol"
repository = "https://github.com/eduardonunesp/btc-p2p"
license = "MIT"
authors = ["Eduardo Pereira <eduardonunesp@gmail.com>"]

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.6"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
crossbeam-utils = "0.8.16"

[[example]]
name = "handshake"
